Fixed x overflow issue

--- a/_sass/shared.scss
+++ b/_sass/shared.scss
@@ -8,7 +8,6 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100dvw;
 }
 
 h1,
